# rustracer

./: .env  .gitignore  Cargo.toml  README.md  build.rs  failed_importance_sampling  res.txt
results/: cornell_box_7k.ppm  final_scene_10k.ppm  final_scene_3k.ppm  no_stratification.ppm  stratification.ppm
rustracer-ui/: Cargo.toml
rustracer-ui/src/: main.rs
scenes/: earth.ron  overlapping.ron  perlin.ron  test.ron
src/: aabb.rs  bvh.rs  camera.rs  color.rs  denoise.rs  hittable.rs  image.rs  interval.rs  lib.rs  light.rs  main.rs  material.rs  model.rs  moving_sphere.rs  onb.rs  pdf.rs  perlin.rs  present.rs  quad.rs  random.rs  ray.rs  render.rs  sampler.rs  scene.rs  settings.rs  sphere.rs  texture.rs  utils.rs  vec3.rs  volume.rs  world.rs  world_options.rs
src/bvh/: builder.rs  bvh.rs  mod.rs
src/gpu/: acceleration_structure.rs  buffer.rs  command_pool.rs  config.rs  decriptor_set.rs  device.rs  error.rs  image.rs  instance.rs  mod.rs  model.rs  pipeline.rs  queue.rs  shader.rs  swapchain.rs  util.rs
src/gpu/shaders/: accumulate.slang  bvh.slang  hittable.slang  material.slang  model.slang
src/integrator/: accumulating_integrator.rs  auxiliary_integrator.rs  direct_light_integrator.rs  mod.rs  present_integrator.rs  random_integrator.rs  simple_path_integrator.rs
src/material/: dielectric.rs  diffuse_light.rs  isotropic.rs  lambertian.rs  material.rs  material_storage.rs  metal.rs  mod.rs
src/model/: mod.rs  model.rs  quad.rs  sphere.rs  transform.rs  triangle.rs  volume.rs
src/ui/: main.rs
