[package]
name = "rustracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rayon = "1.10.0"
anyhow = "1.0.89"
#thiserror = "1.0.47"
image = "0.25.2"
#ash = "0.37.3+1.3.251"
#ash-window = "0.12.0"
#winit = "0.29.1-beta"
#gltf = "1.3.0"
#tobj = "4.0.2"
#nalgebra = "0.33.0"
#nalgebra-glm = "0.19.0"

serde = { version = "1.0.210", features = ["derive"] }
toml= "0.8.19"

winit = { version = "0.30.5", features = ["rwh_06"]}
softbuffer = "0.4.6"
ron = "0.8.1"

[profile.release] 
opt-level = 3
lto = "thin"
debug = true
