[package]
name = "rustracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.10.0"
rayon = "1.10.0"
anyhow = "1.0.98"
#thiserror = "1.0.47"
image = "0.25.6"
#ash = "0.37.3+1.3.251"
#ash-window = "0.12.0"
#winit = "0.29.1-beta"
#gltf = "1.3.0"
#tobj = "4.0.2"
#nalgebra = "0.33.0"
#nalgebra-glm = "0.19.0"

serde = { version = "1.0.219", features = ["derive"] }
toml= "1.0.3"

oidn = "2.3.2"

winit = { version = "0.30.12", features = ["rwh_06"]}
softbuffer = "0.4.6"
ron = "0.12.0"


[profile.release] 
opt-level = 3
lto = "thin"
overflow-checks = false
panic = "abort"
codegen-units = 1
debug = false
